# scrasterizer

./: .gitignore  .gitmodules  CMakeLists.txt
doc/: sc.md
include/: utils.hpp
include/camera/: camera.hpp
include/core/: acceleration.hpp  base.hpp  bvh.hpp  camera.hpp  memory.hpp  mipmap.hpp  program.hpp  texture.hpp
include/obj_loader/: core.hpp  obj.hpp  obj_loader.hpp  objtype.hpp
include/rasterizer/: rasterizer.hpp  scene.hpp
include/window/: canvas.hpp  glwindow.hpp
include/zbuffer/: heirarzbuffer.hpp  naivezbuffer.hpp  scanline.hpp
shaders/basic/: fragment.glsl  vertex.glsl
shaders/debug/: compute.glsl  fragment.glsl  vertex.glsl
shaders/nzbuffer/: fragment.glsl
shaders/scanline/: compute.glsl
src/: CMakeLists.txt  main.cpp  utils.cpp
src/camera/: camera.cpp
src/core/: bvh.cpp  camera.cpp  memory.cpp
src/obj_loader/: obj_loader.cpp
src/rasterizer/: rasterizer.cpp  scene.cpp
src/window/: glwindow.cpp
src/zbuffer/: naivezbuffer.cpp  naivezbufferraster.cpp  scanline.cpp  scanlineraster.cpp
submodules/: CMakeLists.txt
